--- a/FreakyFriday/src/FreakyFriday.html
+++ b/FreakyFriday/src/FreakyFriday.html
@@ -12,7 +12,7 @@
 <section class="menu">
     <ul class="ulMenu">
         <li class="logo">
-            <img src="Bilder/racing-game.png" alt="bakgrunnsBilde" height="50px" width="50px">
+            <img src="Bilder/racing-game.png" alt="logo" height="50px" width="50px">
         </li>
 
         <li class="title">
@@ -43,7 +43,7 @@
 
 <section class="content">
     <div id="bakgrunn">
-        <img src="Bilder/car-background.jpg" height="100%" width="100%">
+        <img src="Bilder/car-background.jpg" height="100%" width="100%" alt="bakgrunnsbilde">
         <pre id="slagOrd">
 Vi tar vare på bilen din!
 </pre>
@@ -53,38 +53,38 @@ Vi tar vare på bilen din!
         <text>Biler</text>
 
             <section class="bilene">
-                <img class="bilBilde" src="#">
+                <img class="bilBilde" src="Bilder/rs6.jpeg" alt="rs6">
                     <ul class="BilInfo">
-                        <li class="Bilnavn">Bilnavn</li>
+                        <li class="Bilnavn">Audi Rs6</li>
                         <li class="bilInfo2">Info</li>
-                        <li class="bilInfo2">Pris</li>
+                        <li class="bilInfo2">989 000,-</li>
                     </ul>
                         <button class="bilKnapp">Kjøp</button>
             </section>
         <section class="bilene">
-            <img class="bilBilde" src="#">
+            <img class="bilBilde" src="Bilder/tycan.jpeg" alt="taycan">
                 <ul class="BilInfo">
-                    <li class="Bilnavn">Bilnavn</li>
+                    <li class="Bilnavn">Porsche Taycan</li>
                     <li class="bilInfo2">Info</li>
-                    <li class="bilInfo2">Pris</li>
+                    <li class="bilInfo2">960 000,-</li>
                 </ul>
                      <button class="bilKnapp">Kjøp</button>
         </section>
         <section class="bilene">
-            <img class="bilBilde" src="#">
+            <img class="bilBilde" src="Bilder/id4.jpeg" alt="id4">
                 <ul class="BilInfo">
-                    <li class="Bilnavn">Bilnavn</li>
+                    <li class="Bilnavn">Volkswagen Id4</li>
                     <li class="bilInfo2">Info</li>
-                    <li class="bilInfo2">Pris</li>
+                    <li class="bilInfo2">500 000,-</li>
                 </ul>
                      <button class="bilKnapp">Kjøp</button>
         </section>
         <section class="bilene">
-            <img class="bilBilde" src="#">
+            <img class="bilBilde" src="Bilder/i8.jpeg" alt="i8">
                     <ul class="BilInfo">
-                        <li class="Bilnavn">Bilnavn</li>
+                        <li class="Bilnavn">BMW i8</li>
                         <li class="bilInfo2">Info</li>
-                        <li class="bilInfo2">Pris</li>
+                        <li class="bilInfo2">900 000,-</li>
                     </ul>
                          <button class="bilKnapp">Kjøp</button>
         </section>
@@ -96,16 +96,16 @@ Vi tar vare på bilen din!
 
         <form class="serviceSkjema">
 
-<label for="navn">Navn:</label>
-            <input id="navn" type="text" name="navn">
+<label for="navn"> <strong> Navn: </strong> </label>
+            <input id="navn" type="text" name="navn" placeholder="Ola Nordmann…">
 <br><br>
-<label for="bilMerke">Bilmerke:</label>
-            <input id="bilMerke" type="text" name="bilMerke">
+<label for="bilMerke"> <strong> Bilmerke: </strong> </label>
+            <input id="bilMerke" type="text" name="bilMerke" placeholder="BMW…">
  <br><br>
- <label for="regNummer">Registreringsnummer:</label>
-            <input id="regNummer" type="text" maxlength="7" name="regNummer">
+ <label for="regNummer"><strong>Registreringsnummer:</strong></label>
+            <input id="regNummer" type="text" maxlength="7" name="regNummer" placeholder="xx00000">
  <br><br>
-<label for="serviceType">Velg type service du ønsker:</label>
+<label for="serviceType"><strong> Velg type service du ønsker:</strong></label>
             <select id="serviceType" name="serviceType">
                 <option value="bilvask">Bilvask</option>
                 <option value="dekkskift">Dekkskift</option>
@@ -113,7 +113,7 @@ Vi tar vare på bilen din!
                 <option value="komplett service">Komplett service</option>
             </select>
  <br><br>
-            <pre><label for="onsketTid">Velg ønsket tid for service:</label> <input id="onsketDato" type="date" name="onsketDato"> <input id="onsketTid" type="time" name="onsketTid"> </pre>
+            <pre><label for="onsketTid"><strong>Velg ønsket tid for service:</strong></label> <input id="onsketDato" type="date" name="onsketDato"> <input id="onsketTid" type="time" name="onsketTid"> </pre>
 
             <button class="regBilKnapp">Registrer Service</button>
         </form>
@@ -136,11 +136,11 @@ Vi tar vare på bilen din!
         <b>Faks:</b> 0312045678<br><br>
         </p>
             <div id="logoKontakt">
-                 <img id="sosialeMedier" src="Bilder/facebook.png">
-                <img id="sosialeMedier" src="Bilder/instagram.png">
-                <img id="sosialeMedier" src="Bilder/twitter.png">
-                <img id="sosialeMedier" src="Bilder/linkedIn.png">
-                <img id="sosialeMedier" src="Bilder/snapchat.png">
+                 <img id="sosialeMedier" src="Bilder/facebook.png" alt="facebook">
+                <img id="sosialeMedier" src="Bilder/instagram.png" alt="instagram">
+                <img id="sosialeMedier" src="Bilder/twitter.png" alt="twitter">
+                <img id="sosialeMedier" src="Bilder/linkedIn.png" alt="linkedIn">
+                <img id="sosialeMedier" src="Bilder/snapchat.png" alt="snapchat">
             </div>
     </div>
 </section>
