--- a/FreakyFriday/src/FreakyFriday.html
+++ b/FreakyFriday/src/FreakyFriday.html
@@ -4,149 +4,155 @@
     <meta charset="UTF-8">
     <title>Freaky Friday</title>
     <link rel="stylesheet" href="FreakyFriday.css">
-    <!--Sørger for at siden blir skalert--!>
+    <!--Sørger for at siden blir skalert-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-
+<!--/*------------------------------------------------------------------------------------------------------------*/-->
 <section class="menu">
-    <ul class="ulMenu">
-        <li class="logo">
-            <img src="Bilder/racing-game.png" alt="logo" height="50px" width="50px">
-        </li>
-
-        <li class="title">
-                Cars&Cars
-        </li>
-
-       <li class="menuLink">
-           <a href="FreakyFriday.html"> Hjem </a>
+   <ul class="ulMenu">
+       <li class="logo">
+           <img src="Bilder/racing-game.png" alt="logo" height="50px" width="50px">
        </li>
 
-        <li class="menuLink">
-            <a href="#kjopBiler"> Biler </a>
-        </li>
+       <li class="title">
+               Cars&Cars
+       </li>
 
-        <li class="menuLink">
-            <a href="#bestillService"> Bestill Service </a>
-        </li>
+      <li class="menuLink">
+          <a href="FreakyFriday.html"> Hjem </a>
+      </li>
 
-        <li class="menuLink">
-            <a href="#omOss"> Om Oss </a>
-        </li>
+       <li class="menuLink">
+           <a href="#kjopBiler"> Biler </a>
+       </li>
 
-        <li class="menuLink">
-            <a href="#kontaktOss"> Kontakt Oss </a>
-        </li>
-    </ul>
+       <li class="menuLink">
+           <a href="#bestillService"> Bestill Service </a>
+       </li>
+
+       <li class="menuLink">
+           <a href="#omOss"> Om Oss </a>
+       </li>
+
+       <li class="menuLink">
+           <a href="#kontaktOss"> Kontakt Oss </a>
+       </li>
+   </ul>
 </section>
 
+<!--/*------------------------------------------------------------------------------------------------------------*/-->
 <section class="content">
-    <div id="bakgrunn">
-        <img src="Bilder/car-background.jpg" height="100%" width="100%" alt="bakgrunnsbilde">
-        <pre id="slagOrd">
+   <div id="bakgrunn">
+       <img src="Bilder/car-background.jpg" height="100%" width="100%" alt="bakgrunnsbilde">
+       <pre id="slagOrd">
 Vi tar vare på bilen din!
 </pre>
-    </div>
-    
-    <div id="kjopBiler">
-        <text>Biler</text>
+   </div>
 
-            <section class="bilene">
-                <img class="bilBilde" src="Bilder/rs6.jpeg" alt="rs6">
-                    <ul class="BilInfo">
-                        <li class="Bilnavn">Audi Rs6</li>
-                        <li class="bilInfo2">Info</li>
-                        <li class="bilInfo2">989 000,-</li>
-                    </ul>
+ <!--/*------------------------------------------------------------------------------------------------------------*/-->
+   <div id="kjopBiler">
+       <text>Biler</text>
+
+           <section class="bilene">
+               <img class="bilBilde" src="Bilder/rs6.jpeg" alt="rs6">
+                   <ul class="BilInfo">
+                       <li class="Bilnavn">Audi Rs6</li>
+                       <li class="bilInfo2">Info</li>
+                       <li class="bilInfo2">989 000,-</li>
+                   </ul>
+                       <button class="bilKnapp">Kjøp</button>
+           </section>
+       <section class="bilene">
+           <img class="bilBilde" src="Bilder/tycan.jpeg" alt="taycan">
+               <ul class="BilInfo">
+                   <li class="Bilnavn">Porsche Taycan</li>
+                   <li class="bilInfo2">Info</li>
+                   <li class="bilInfo2">960 000,-</li>
+               </ul>
+                    <button class="bilKnapp">Kjøp</button>
+       </section>
+       <section class="bilene">
+           <img class="bilBilde" src="Bilder/id4.jpeg" alt="id4">
+               <ul class="BilInfo">
+                   <li class="Bilnavn">Volkswagen Id4</li>
+                   <li class="bilInfo2">Info</li>
+                   <li class="bilInfo2">500 000,-</li>
+               </ul>
+                    <button class="bilKnapp">Kjøp</button>
+       </section>
+       <section class="bilene">
+           <img class="bilBilde" src="Bilder/i8.jpeg" alt="i8">
+                   <ul class="BilInfo">
+                       <li class="Bilnavn">BMW i8</li>
+                       <li class="bilInfo2">Info</li>
+                       <li class="bilInfo2">900 000,-</li>
+                   </ul>
                         <button class="bilKnapp">Kjøp</button>
-            </section>
-        <section class="bilene">
-            <img class="bilBilde" src="Bilder/tycan.jpeg" alt="taycan">
-                <ul class="BilInfo">
-                    <li class="Bilnavn">Porsche Taycan</li>
-                    <li class="bilInfo2">Info</li>
-                    <li class="bilInfo2">960 000,-</li>
-                </ul>
-                     <button class="bilKnapp">Kjøp</button>
-        </section>
-        <section class="bilene">
-            <img class="bilBilde" src="Bilder/id4.jpeg" alt="id4">
-                <ul class="BilInfo">
-                    <li class="Bilnavn">Volkswagen Id4</li>
-                    <li class="bilInfo2">Info</li>
-                    <li class="bilInfo2">500 000,-</li>
-                </ul>
-                     <button class="bilKnapp">Kjøp</button>
-        </section>
-        <section class="bilene">
-            <img class="bilBilde" src="Bilder/i8.jpeg" alt="i8">
-                    <ul class="BilInfo">
-                        <li class="Bilnavn">BMW i8</li>
-                        <li class="bilInfo2">Info</li>
-                        <li class="bilInfo2">900 000,-</li>
-                    </ul>
-                         <button class="bilKnapp">Kjøp</button>
-        </section>
-    </div>
+       </section>
+   </div>
 
-    <div id="bestillService">
-        <text>Bestill Service</text>
-        <h2 style="text-align: center; top: 160px; position: relative;">Registrer din bil for service her</h2>
+<!--/*------------------------------------------------------------------------------------------------------------*/-->
+   <div id="bestillService">
+       <text>Bestill Service</text>
+       <h2 style="text-align: center; top: 160px; position: relative;">Registrer din bil for service her</h2>
 
-        <form class="serviceSkjema">
+       <form class="serviceSkjema">
 
 <label for="navn"> <strong> Navn: </strong> </label>
-            <input id="navn" type="text" name="navn" placeholder="Ola Nordmann…">
+           <input id="navn" type="text" name="navn" placeholder="Ola Nordmann…">
 <br><br>
 <label for="bilMerke"> <strong> Bilmerke: </strong> </label>
-            <input id="bilMerke" type="text" name="bilMerke" placeholder="BMW…">
- <br><br>
- <label for="regNummer"><strong>Registreringsnummer:</strong></label>
-            <input id="regNummer" type="text" maxlength="7" name="regNummer" placeholder="xx00000">
- <br><br>
+           <input id="bilMerke" type="text" name="bilMerke" placeholder="BMW…">
+<br><br>
+<label for="regNummer"><strong>Registreringsnummer:</strong></label>
+           <input id="regNummer" type="text" maxlength="7" name="regNummer" placeholder="xx00000">
+<br><br>
 <label for="serviceType"><strong> Velg type service du ønsker:</strong></label>
-            <select id="serviceType" name="serviceType">
-                <option value="bilvask">Bilvask</option>
-                <option value="dekkskift">Dekkskift</option>
-                <option value="motorvask">Motorvask</option>
-                <option value="komplett service">Komplett service</option>
-            </select>
- <br><br>
-            <pre><label for="onsketTid"><strong>Velg ønsket tid for service:</strong></label> <input id="onsketDato" type="date" name="onsketDato"> <input id="onsketTid" type="time" name="onsketTid"> </pre>
+           <select id="serviceType" name="serviceType">
+               <option value="bilvask">Bilvask</option>
+               <option value="dekkskift">Dekkskift</option>
+               <option value="motorvask">Motorvask</option>
+               <option value="komplett service">Komplett service</option>
+           </select>
+<br><br>
+           <pre><label for="onsketTid"><strong>Velg ønsket tid for service:</strong></label> <input id="onsketDato" type="date" name="onsketDato"> <input id="onsketTid" type="time" name="onsketTid"> </pre>
 
-            <button class="regBilKnapp">Registrer Service</button>
-        </form>
-                <p class="skrivUtP"> </p>
-    </div>
+           <button class="regBilKnapp">Registrer Service</button>
+       </form>
+               <p class="skrivUtP"> </p>
+   </div>
 
-    <div id="omOss">
-        <text>Om Oss</text>
-        <p class="omOssP">Vi som kjede ble etablert i juli 2011. Likevel har alle verkstedene lang og bred erfaring i vedlikehold og service på spesielt tyngre kjøretøy. Alle er godkjente flermerkeverksteder.
-            Våre 350 ansatte vet alle hvor viktig kjøretøyet er for deg. Vi vektlegger god service, kvalitet og kompetanse for å gjøre ditt verkstedopphold så kort og godt som mulig. Vi utfører reparasjon og vedlikehold på store varebiler, bobiler, lastebiler, busser og hengere. Alle merker er velkomne. Våre verksteder er utrustet med moderne og avansert utstyr for reparasjon og elektronisk feilsøking. Hos oss sparer du tid og penger, alt for at du skal kunne ha bilen der den hører hjemme - på veien!
-            Vi har egen import av reservedeler til de fleste kjøretøy og hengere. En av våre grunntanker er å holde utgiftene for bilhold så rimelig som mulig. Derfor prøver vi å skaffe alternative deler hos kjente leverandører til en gunstig pris – men alltid av original kvalitet.</p>
-    </div>
+<!--/*------------------------------------------------------------------------------------------------------------*/-->
+   <div id="omOss">
+       <text>Om Oss</text>
+       <p class="omOssP">Vi som kjede ble etablert i juli 2011. Likevel har alle verkstedene lang og bred erfaring i vedlikehold og service på spesielt tyngre kjøretøy. Alle er godkjente flermerkeverksteder.
+           Våre 350 ansatte vet alle hvor viktig kjøretøyet er for deg. Vi vektlegger god service, kvalitet og kompetanse for å gjøre ditt verkstedopphold så kort og godt som mulig. Vi utfører reparasjon og vedlikehold på store varebiler, bobiler, lastebiler, busser og hengere. Alle merker er velkomne. Våre verksteder er utrustet med moderne og avansert utstyr for reparasjon og elektronisk feilsøking. Hos oss sparer du tid og penger, alt for at du skal kunne ha bilen der den hører hjemme - på veien!
+           Vi har egen import av reservedeler til de fleste kjøretøy og hengere. En av våre grunntanker er å holde utgiftene for bilhold så rimelig som mulig. Derfor prøver vi å skaffe alternative deler hos kjente leverandører til en gunstig pris – men alltid av original kvalitet.</p>
+   </div>
 
-    <div id="kontaktOss">
-        <text>Kontakt Oss</text>
-        <p class="kontaktOss">
-        <b>Adresse:</b> Olav M. Troviks vei 58. 0864, Oslo<br><br><br>
-        <b>Telefonnummer:</b> 95470772<br><br><br>
-        <b>Email:</b> Cars@Cars.Cars<br><br><br>
-        <b>Faks:</b> 0312045678<br><br>
-        </p>
-            <div id="logoKontakt">
-                 <img id="sosialeMedier" src="Bilder/facebook.png" alt="facebook">
-                <img id="sosialeMedier" src="Bilder/instagram.png" alt="instagram">
-                <img id="sosialeMedier" src="Bilder/twitter.png" alt="twitter">
-                <img id="sosialeMedier" src="Bilder/linkedIn.png" alt="linkedIn">
-                <img id="sosialeMedier" src="Bilder/snapchat.png" alt="snapchat">
-            </div>
-    </div>
+<!--/*------------------------------------------------------------------------------------------------------------*/-->
+   <div id="kontaktOss">
+       <text>Kontakt Oss</text>
+       <p class="kontaktOss">
+       <b>Adresse:</b> Olav M. Troviks vei 58. 0864, Oslo<br><br><br>
+       <b>Telefonnummer:</b> 95470772<br><br><br>
+       <b>Email:</b> Cars@Cars.Cars<br><br><br>
+       <b>Faks:</b> 0312045678<br><br>
+       </p>
+           <div id="logoKontakt">
+                <img id="sosialeMedier" src="Bilder/facebook.png" alt="facebook">
+               <img id="sosialeMedier" src="Bilder/instagram.png" alt="instagram">
+               <img id="sosialeMedier" src="Bilder/twitter.png" alt="twitter">
+               <img id="sosialeMedier" src="Bilder/linkedIn.png" alt="linkedIn">
+               <img id="sosialeMedier" src="Bilder/snapchat.png" alt="snapchat">
+           </div>
+   </div>
 </section>
 
+<!--/*------------------------------------------------------------------------------------------------------------*/-->
 <section class="footer">
-    &copy; Ole Jørgen Knoph - s354371
+   &copy; Ole Jørgen Knoph - s354371
 </section>
 </body>
 </html>
