Endre HJEM-link til nytt navn (index)

--- a/FreakyFriday/src/index.html
+++ b/FreakyFriday/src/index.html
@@ -20,7 +20,7 @@
        </li>
 
       <li class="menuLink">
-          <a href="FreakyFriday.html"> Hjem </a>
+          <a href="index.html"> Hjem </a>
       </li>
 
        <li class="menuLink">
