--- a/SeeCorrectMake/Nettsiden/src/index.html
+++ b/SeeCorrectMake/Nettsiden/src/index.html
@@ -8,7 +8,7 @@
 <body>
 <div class="sideBar">SIDEBAR</div>
 <div class="innholdSide">
-    <div class="sideSlide1">Funka det? Ja visst faen</div>
+    <div class="sideSlide1">Funka det? Ja visst faen sickk</div>
 
         <div class="nedreMeny">
 
