--- a/SeeCorrectMake/Nettsiden/src/index.html
+++ b/SeeCorrectMake/Nettsiden/src/index.html
@@ -4,11 +4,31 @@
     <meta charset="UTF-8">
     <title>University of Advancing Technology</title>
     <link rel="stylesheet" href="index.css">
+    <!--Henter ikoner fra bibliotek-->
+    <script src="https://kit.fontawesome.com/48a8e80ce3.js" crossorigin="anonymous"></script>
 </head>
 <body>
-<div class="sideBar">SIDEBAR</div>
+<!--Menyen på starten til venstre som faller inn -->
+<div class="sideBar">
+    <img class="logo" src="Images/UAT_logo.png">
+    <i class="slagOrd">
+        <pre><!--Sørger for at teksten formatteres slik som den skrives her -->
+            LEARN.
+            EXPERIENCE.
+            INNOVATE.
+    </pre></i>
+
+    <ul class="infoMeny">
+        <li class="infoMenyPunkt"> <a href="#" class="fas fa-info">REQUEST INFO</a> </li>
+        <li class="infoMenyPunkt"> <a href="#"  class="fas fa-phone">(800)658-5744</a> </li>
+        <li class="infoMenyPunkt"> <a href="#"  class="fas fa-paper-plane">APPLY AT UAT</a> </li>
+        <li class="infoMenyPunkt"> <a href="#"  class="fas fa-bars">MENU</a> </li>
+    </ul>
+
+</div>
+
 <div class="innholdSide">
-    <div class="sideSlide1">Funka det? Ja visst faen sickk</div>
+    <div class="sideSlide1"></div>
 
         <div class="nedreMeny">
 
