--- a/SeeCorrectMake/Nettsiden/src/index.html
+++ b/SeeCorrectMake/Nettsiden/src/index.html
@@ -33,7 +33,7 @@ INNOVATE.<br>
 <div class="innholdSide">
     <div class="sideSlide1">
 
-        <div class="arrowRight" onclick="rightScroll()"><i class="fas fa-arrow-right" id="arrow"></i></div>
+        <div class="arrowRight" onclick="rightScroll()"><i class="fas fa-arrow-right"></i></div>
 
     </div>
 
@@ -47,12 +47,12 @@ INNOVATE.<br>
 
     <div class="sideSlide2">
 
-        <div class="arrowRight1" onclick="rightScroll1()"><i class="fas fa-arrow-right" id="arrow"></i></div>
-        <div class="arrowLeft" onclick="leftScroll()"><i class="fas fa-arrow-left" id="arrow"></i></div>
+        <div class="arrowRight1" onclick="rightScroll1()"><i class="fas fa-arrow-right"></i></div>
+        <div class="arrowLeft" onclick="leftScroll()"><i class="fas fa-arrow-left"></i></div>
     </div>
     <div class="sideSlide3">
 
-        <div class="arrowLeft1" onclick="leftScroll1()"><i class="fas fa-arrow-left" id="arrow"></i></div>
+        <div class="arrowLeft1" onclick="leftScroll1()"><i class="fas fa-arrow-left"></i></div>
     </div>
 </div>
 </body>
