Prøver å fikse slide-pilene css i nedre venstre

--- a/SeeCorrectMake/Nettsiden/src/index.html
+++ b/SeeCorrectMake/Nettsiden/src/index.html
@@ -42,8 +42,8 @@ INNOVATE.<br>
                 <div class="nedreMenyInfo1">
                     <i class="info1Overskrift"><b>ANNOUNCEMENTS</b></i>
 <!--Piler som slider teksten-->
-                    <i class="info1 fas fa-angle-left" onclick="minusSlides()"></i>
-                    <i class="info2 fas fa-angle-right" onclick="plusSlides()"></i>
+                    <i class="infoPil1 fas fa-angle-left" onclick="minusSlides()"></i>
+                    <i class="infoPil2 fas fa-angle-right" onclick="plusSlides()"></i>
 <!--container for teksten-->
                     <div class="infoSlideShow">
 <!--Tekstene som skal slide-->
