Update. Prøve å få infinite loop slik at alt printes ut i tittel

--- a/SeeCorrectMake/Nettsiden/src/index.html
+++ b/SeeCorrectMake/Nettsiden/src/index.html
@@ -41,7 +41,7 @@ INNOVATE.<br>
             <h1>WE ARE UAT<br>
                 <span class="span">
                     THINK OUTSIDE <br>
-                    THE <div class="dynamicOrd"></div>
+                    THE <div class="dynamicOrd">PIXELS</div>
                 </span>
             </h1>
         </div>
