Ordnet nesten alt på forside. Fikk ikke til å droppe opp igjen dropdown liste. Mangler nå side 2 og 3 + menyen i sidebar

--- a/SeeCorrectMake/Nettsiden/src/index.html
+++ b/SeeCorrectMake/Nettsiden/src/index.html
@@ -30,22 +30,61 @@ INNOVATE.<br>
 
 </div>
 
+<!--Hele siden 300vw til høyre-->
 <div class="innholdSide">
+
+ <!--Hovedside nr 1-->
     <div class="sideSlide1">
+
 <!--Pil for scroll høyre-->
         <div class="arrowRight" onclick="rightScroll()"><i class="slide fas fa-arrow-right"></i></div>
-<!--bakgrunns-bilde-->
-            <img class="img1" src="Images/backgroundSlide3.jpeg">
+
+<!--Bakgrunns-bilde-->
+            <img class="img1" alt="bakgrunnsbilde" src="Images/backgroundSlide3.jpeg">
+
 <!--Tittel-->
         <div class="hovedskrift">
             <h1>WE ARE UAT<br>
                 <span class="span">
                     THINK OUTSIDE <br>
-                    THE <div class="dynamicOrd">PIXELS</div>
+                    THE <span class="dynamicOrd">PIXELS</span>
                 </span>
             </h1>
         </div>
 
+<!--Felt for å velge degree dropdown-list-->
+    <div class="degreeDrop" onclick="dropDownDegree()">
+                I WOULD LIKE A DEGREE IN…
+            <div class="degree-pil">
+                <i class="fas fa-angle-double-down"></i>
+            </div>
+    </div>
+        <div class="theDegreesDropdown">
+            <li class="theDegrees"> See All Degrees </li>
+            <li class="theDegrees">See Online Degrees </li>
+            <li class="theDegrees">Advertising Art</li>
+            <li class="theDegrees">Advancing Computer Science</li>
+            <li class="theDegrees">Artificial Intelligence</li>
+            <li class="theDegrees">Business Technology</li>
+            <li class="theDegrees">Cyber Security (MS)</li>
+            <li class="theDegrees">Data Science</li>
+            <li class="theDegrees">Digital Maker & Fabrication</li>
+            <li class="theDegrees">Digital Marketing</li>
+            <li class="theDegrees">Digital Video</li>
+            <li class="theDegrees">Game Art & Animation</li>
+            <li class="theDegrees">Game Design</li>
+            <li class="theDegrees">Game Production (MS)</li>
+            <li class="theDegrees">Game Programming</li>
+            <li class="theDegrees">Human Computer Interaction</li>
+            <li class="theDegrees">Network Engineering</li>
+            <li class="theDegrees">Network Security</li>
+            <li class="theDegrees">Robotics & Embedded Systems</li>
+            <li class="theDegrees">Software Engineering (MS)</li>
+            <li class="theDegrees">Technology Innovation (MS)</li>
+            <li class="theDegrees">Technology Leadership (MS)</li>
+            <li class="theDegrees">Technology Studies</li>
+            <li class="theDegrees">Technology Forensics</li>
+        </div>
 
     </div>
     <!--Nedre info-meny på første hovedside--->
@@ -64,7 +103,7 @@ INNOVATE.<br>
                             Check out our guide for Episode 2020: <br>
                             Return of the Geeks […]
                         </div>
-                        <div class="slide2"style="display: none">
+                        <div class="slide2" style="display: none">
                             <b>COVID-19 UPDATES</b><br>
                             Precautions we're taking in an effort to <br>
                             protect our UAT family […]
@@ -86,7 +125,7 @@ INNOVATE.<br>
                                 Professor Peters shares what she <br>
                                 wished she knew before college […]
                             </div>
-                            <div class="slide4"style="display: none">
+                            <div class="slide4" style="display: none">
                                 <b>UAT REFURBATHON RESULTS</b><br>
                                 UAT student build 121 free computers <br>
                                 for Title 1 Schools […]
