fikset dropdown-listen med studier

--- a/SeeCorrectMake/Nettsiden/src/index.html
+++ b/SeeCorrectMake/Nettsiden/src/index.html
@@ -59,7 +59,7 @@ INNOVATE.<br>
                 <i class="fas fa-angle-double-down"></i>
             </div>
     </div>
-        <div class="theDegreesDropdown">
+        <div class="theDegreesDropdown" style="display: none;">
             <li class="theDegrees"> See All Degrees </li>
             <li class="theDegrees">See Online Degrees </li>
             <li class="theDegrees">Advertising Art</li>
