lagd ferdig tittel-slide på side 2 og lagt til skygge på sidebar kollaps. Dette da det ikke var noen skille mellom tittel-slide diven og sidebar (så rart ut)

--- a/SeeCorrectMake/Nettsiden/src/index.html
+++ b/SeeCorrectMake/Nettsiden/src/index.html
@@ -87,6 +87,7 @@ INNOVATE.<br>
         </div>
 
     </div>
+
     <!--Nedre info-meny på første hovedside--->
     <div class="nedreMeny">
 
@@ -134,10 +135,30 @@ INNOVATE.<br>
                 </div>
 
         </div>
+
+<!--Hovedside nr 2-->
     <div class="sideSlide2">
 <!--Pil for scroll høyre og venstre--->
         <div class="arrowRight1" onclick="rightScroll1()"><i class="slide fas fa-arrow-right"></i></div>
         <div class="arrowLeft" onclick="leftScroll()"><i class="slide fas fa-arrow-left"></i></div>
+
+<!--DIV som inneholder side-overskriften-->
+        <div class="sideOverskrift">
+            <span class="sideOverskriftContainer">
+                <span class="hovedSideOverskrift">Find your fit<br></span>
+                <i class="underSideOverskrift">Explore our degrees</i>
+            </span>
+        </div>
+
+<!--DIV som inneholder degree-kortene (som flippes)-->
+        <div class="degreeFlipDiv">
+
+        </div>
+
+<!--DIV som inneholder sidebildet-->
+        <div class="slide2sideBildet">
+
+        </div>
     </div>
     <div class="sideSlide3">
 <!--Pil for scroll venstre--->
