jobber med flipcards. Gjort 1, gjør bare det samme på de 5 andre. Velge farge etter hvilket bildet som skal på høyre

--- a/SeeCorrectMake/Nettsiden/src/index.html
+++ b/SeeCorrectMake/Nettsiden/src/index.html
@@ -150,9 +150,30 @@ INNOVATE.<br>
             </span>
         </div>
 
-<!--DIV som inneholder degree-kortene (som flippes)-->
+<!--DIV som inneholder DIV med degree-kortene (som flippes)-->
         <div class="degreeFlipDiv">
+                <div class="degreeCards">
 
+                    <div class="flipCard1">
+                        <div class="flipCardInner1">
+                                <div class="cards11">
+                                    <i class="cards fas fa-briefcase"><br>Business &<br>Innovation</i>
+                                </div>
+                                <div class="baksideFlip1">
+                                    <p class="overskriftFlipCard">Business & Innovation</p>
+                                    <i class="fas fa-plus">Business Technology</i>
+                                    <i class="fas fa-plus">Technology Innovation (MS)</i>
+                                    <i class="fas fa-plus">Technology Leadership (MS)</i>
+                                    <i class="fas fa-plus">Technology Studies</i>
+                                </div>
+                        </div>
+                    </div>
+                    <div class="cards21"> <i class="cards fas fa-user-plus"><br>Creation &<br>Simulation</i> </div>
+                    <div class="cards22"> <i class="cards fas fa-shield-alt"><br>Cyber<br>Security</i> </div>
+                    <div class="cards12"> <i class="cards fas fa-palette"><br>Digital<br>Arts</i> </div>
+                    <div class="cards13"> <i class="cards fas fa-gamepad"><br>Game<br>Studies</i> </div>
+                    <div class="cards23"> <i class="cards fas fa-cogs"><br>Software<br>Engineering</i> </div>
+                </div>
         </div>
 
 <!--DIV som inneholder sidebildet-->
